--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <div id="app"></div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
         <script src="/app.js"></script>
     </body>
 </html>
